[package]
name = "rupper"
version = "0.1.0"
publisher = ["Benjahjp"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sha2 = "0.10.6"
md5 = "0.7.0"
base64 = "0.13.0"
sha256 = "1.0.0"
md4 = "0.9.0"
sha1 = "0.6.0"
ripemd320 = "0.9.0"
ripemd128 = "0.1.2"
whirlpool = "0.9.0"
md2 = "0.9.0"
ripemd160 = "0.9.1"
blake2 = "0.9.2"
tiger = "0.1.0"
digest = "0.9.0"
shabal = "0.3.0"
