[package]
name = "rupper"
version = "0.1.0"
publisher = ["Benjahjp"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-to-ascii-art="0.1.5"
sha2 = "0.10.7"
md5 = "0.7.0"
base64 = "0.21.4"
sha256 = "1.0.0"
md4 = "0.10.2"
sha1 = "0.10.5"
ripemd320 = "0.10.0"
ripemd128 = "0.1.2"
whirlpool = "0.10.4"
md2 = "0.10.2"
ripemd160 = "0.10.0"
blake2 = "0.10.6"
tiger = "0.2.1"
digest = "0.10.7"
shabal = "0.4.1"
clap = { version = "4.4.3", features = ["derive"] }
